# energipays-bridge

./: .env.example  .gitignore  AES_KEY_INVESTIGATION.md  Analytics.csv  BACKLOG.md  Boost 1hour 100 and reduce power then Stop.har  CHANGELOG.md  CLAUDE.md  Dockerfile  Energipays.html  HTTPToolkit_2026-06-27_12-29.har  README.md  Weather Boost ON and then OFF HTTPToolkit_2026-06-27_12-39.har  build.yaml  config.yaml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  repository.json
.claude/: launch.json
src/energipays_bridge/: cli.py  environment.py  ha_options.py  ha_supervisor.py  main.py  mqtt_lifecycle.py  poller.py  sample.py
src/energipays_bridge/api/: admin.py  cloud_stats.py  devices.py  http_metrics.py  integrations.py  metrics.py  mqtt_api.py  notifications.py  points.py  setup.py  solar.py  ui.py  weather_nem.py
src/energipays_bridge/config/: settings.py
src/energipays_bridge/integrations/: __init__.py  base.py  ha_ws_poller.py  modbus_poller.py  models.py  mqtt_subscriber.py  registry.py  rest_poller.py  sunspec_scanner.py
src/energipays_bridge/notifications/: dispatcher.py  trigger.py
src/energipays_bridge/publish/: entities.py  mqtt_publisher.py
src/energipays_bridge/static/: manifest.json  sw.js
src/energipays_bridge/static/css/: app.css
src/energipays_bridge/static/js/: analytics_tab.js  app.js  dashboard_tab.js  logs_tab.js  mqtt_tab.js  raw_tab.js  rules_tab.js  settings_tab.js
src/energipays_bridge/store/: credentials.py  db.py  metrics.py
src/energipays_bridge/templates/: index.html
(+12 files in other folders)
