[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "energipays-bridge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31",
    "pycryptodome>=3.19",
    "paho-mqtt>=2.0",
    "httpx>=0.27",
    "aiohttp>=3.9",
]

[project.scripts]
energipays-bridge = "energipays_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
